fix: use Stream.toList for observation DTO mapping